@@ -15,11 +15,6 @@ application {
     mainClassName = "edu.illinois.cs.cs125.answerable.jeedrunner.MainKt"
 }
 tasks.test {
-    if (JavaVersion.current() >= JavaVersion.VERSION_11) {
-        jvmArgs("-ea", "-Xmx1G", "-Xss256k", "--enable-preview")
-    } else {
-        jvmArgs("-ea", "-Xmx1G", "-Xss256k")
-    }
     environment["JEED_MAX_THREAD_POOL_SIZE"] = 4
 }
 publishing {
